tests/baselines/reference/computedPropertyNames32_ES6.errors.txt
computedPropertyNames32_ES6.ts(6,10): error TS2467: A computed property name cannot reference a type parameter from its containing type.


==== computedPropertyNames32_ES6.ts (1 errors) ====
    function foo<T>() { return '' }
    class C<T> {
        bar() {
            return 0;
        }
        [foo<T>()]() { }
             ~
!!! error TS2467: A computed property name cannot reference a type parameter from its containing type.
    }